# ctl365

./: .gitignore  CHANGELOG.md  COMMANDS.md  Cargo.toml  GETTING_STARTED.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING_GUIDE.md  TEST_AUTHENTICATION.md  connect-shell.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: APPLE_MDM_PUSH_CERTIFICATE.md  APP_REGISTRATION.md  COMMANDS.md  EXCHANGE.md  GETTING_STARTED.md  MACOS_DEPLOYMENT.md  PERMISSIONS.md  QUICKSTART.md  README.md  SECURITY_MODEL.md  TENANT_BASELINE.md  TEST_AUTHENTICATION.md  TROUBLESHOOTING.md  WINDOWS_AUTOPILOT.md
docs/advisories/: accepted.md  resolved.md
docs/getting-started/: app-registration.md  configuration.md  getting-started.md  quickstart.md
docs/guides/: apple-mdm-push-certificate.md  macos-deployment.md  tenant-baseline.md  troubleshooting.md  windows-autopilot.md
docs/internals/: dependencies.md  security-model.md
docs/reference/: commands.md  exchange.md  permissions.md
docs/rust/: DEPENDENCIES.md  TESTING.md
docs/testing/: rust-testing.md  testing-guide.md
examples/: autopilot-devices.csv  group-mapping.json  windows-baseline-basic.json
release/linux/arch/: PKGBUILD
release/linux/deb/: build-deb.sh
release/linux/fedora/: ctl365.spec
release/windows/: README.md  WIN_HOWTO.txt  bootstrap.ps1  build-release.sh  install.ps1  uninstall.ps1
src/: error.rs  lib.rs  main.rs
src/cmd/: aadconnect.rs  app_deployment.rs  audit_enhanced.rs  autopilot.rs  baseline.rs  ca.rs  ca_location.rs  copilot.rs  export_enhanced.rs  gpo.rs  login.rs  mod.rs  package.rs  progress.rs  report_template.rs  script.rs  scuba.rs  sharepoint.rs  tenant.rs  tenant_baseline.rs  viva.rs
src/config/: mod.rs
src/graph/: auth.rs  conditional_access.rs  copilot.rs  defender.rs  exchange_online.rs  identity_protection.rs  intune.rs  mod.rs  retry.rs  sharepoint.rs  viva.rs
src/templates/: android.rs  ca_baseline_2025.rs  ca_policies_full.rs  cis_benchmarks.rs  ios.rs  macos.rs  mod.rs  settings_catalog.rs  tenant_baseline.rs  windows.rs  windows_autopilot.rs  windows_oib.rs
src/tui/: app.rs  change_tracker.rs  context.rs  menu.rs  mod.rs  msp.rs  prompts.rs  settings.rs  tasks.rs
tests/: config_validation_tests.rs  graph_client_tests.rs
