[package]
name = "ctl365"
version = "0.1.10"
edition = "2024"
authors = ["Resolve Technology LLC"]
description = "Enterprise-grade Microsoft 365 deployment automation CLI"
license = "LicenseRef-Proprietary"
repository = "https://github.com/resotech/ctl365"
keywords = ["microsoft", "m365", "intune", "automation", "msp"]
categories = ["command-line-utilities"]

[lib]
name = "ctl365"
path = "src/lib.rs"

[[bin]]
name = "ctl365"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "3.1"
indicatif = "0.18"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }

# TUI Framework
ratatui = "0.30"
crossterm = "0.29"
crossbeam-channel = "0.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }

# Authentication
oauth2 = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Config & file management
directories = "6.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
url = "2.5"
urlencoding = "2.1"
zip = "8"
walkdir = "2.5"
base64 = "0.22"
rand = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
